# benri

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  changelog.md  license.md  readme.md  tables.md  todo.md
examples/: affine.cpp  cake.cpp  chrono.cpp  implicit.cpp  mpusz.cpp  ostream.cpp  oven.cpp  overflow.cpp  pirate_ninja.cpp  radioactivity.cpp  runtime.cpp  temperature.cpp
include/benri/: card.h  casts.h  chrono.h  cmath.h  config.h  quantity.h  quantity_point.h  unit.h
include/benri/impl/: algorithm.h  array.h  atom.h  cmath.h  config.h  detector.h  dimension.h  dimensions.h  helpers.h  list.h  macros.h  math.h  meta_math.h  prefix.h  quantity.h  sorting.h  type_traits.h  unit.h
include/benri/impl/benri/: dimensions.h  prefixes.h  unit.h
include/benri/impl/meta/: algorithm.h  array.h  math.h  string.h
include/benri/impl/type/: comp.h  list.h  math.h  sort.h  sorting.h  traits.h
include/benri/si/: astronomic.h  base.h  cgs.h  chemical.h  data.h  dimensions.h  everything.h  extra.h  imperial.h  macros.h  prefixes.h  si.h  temperature.h
include/benri/units/: astronomic.h  data.h  dimensions.h  imperial.h  macros.h  prefix.h  si.h  systems.h
tests/: CMakeLists.txt  casts.cpp  chrono.cpp  constants.cpp  everything.cpp  helpers.h  one.cpp  quantity.cpp  quantity_point.cpp  temperature.cpp
